# ka_ws

Remodel_project/: README.md
Remodel_project/collision/: CMakeLists.txt  README.md  package.xml
Remodel_project/collision/include/: ComputeCollision.h  MoveGroup.h  imarker.h  interactive_robot.h  pose_string.h
Remodel_project/collision/script/: database_assembly.py
Remodel_project/collision/src/: CollisionChecker.cpp  ComputeCollision.cpp  MoveGroup.cpp  imarker.cpp  interactive_robot.cpp  pose_string.cpp
Remodel_project/collision/srv/: CollisionDistance.srv  CollisionServer.srv
Remodel_project/flexbe/: README.md
Remodel_project/flexbe/dlo_behaviors/dlo_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
Remodel_project/flexbe/dlo_behaviors/dlo_flexbe_states/: CMakeLists.txt  package.xml  setup.py
Remodel_project/kinematics/uc1_c_spline/: CMakeLists.txt  package.xml
Remodel_project/kinematics/uc1_c_spline/include/uc1_c_spline/: FIRFilter.h  Spline.h
Remodel_project/kinematics/uc1_c_spline/src/: uc1_c_spline.cpp
Remodel_project/kinematics/uc1_c_spline/src/uc1_c_spline/: FIRFilter.cpp  Spline.cpp
Remodel_project/kinematics/uc1_c_spline/srv/: interpolate.srv  joint_interpolate.srv
Remodel_project/kinematics/uc1_simulation/uc1_msgs/: CMakeLists.txt  package.xml
Remodel_project/kinematics/uc1_simulation/uc1_msgs/action/: PinToPin.action  RailScanning.action  Wait.action  addNewComponent.action  checkCollision.action  componentDetection.action  findComponent.action  graspDLO.action  objectDetector.action
Remodel_project/kinematics/uc1_simulation/uc1_msgs/msg/: database_element.msg  hole.msg  holeArray.msg
Remodel_project/kinematics/uc1_simulation/uc1_msgs/srv/: databaseAddComponent.srv  databaseLoadNew.srv  databaseShiftPosition.srv  getClusterTransformation.srv  getHoleDetection.srv  startNetwork.srv  updateImagePath.srv
Remodel_project/kinematics/uc1_simulation/ur_kinematics_robot/: CMakeLists.txt  package.xml
Remodel_project/kinematics/uc1_simulation/ur_kinematics_robot/ik_error/: pose_not_found.csv
Remodel_project/kinematics/uc1_simulation/ur_kinematics_robot/include/ur_kinematics/: ik_ur.h
Remodel_project/kinematics/uc1_simulation/ur_kinematics_robot/msg/: JointMatrix.msg
Remodel_project/kinematics/uc1_simulation/ur_kinematics_robot/scripts/: benchmark.py
Remodel_project/kinematics/uc1_simulation/ur_kinematics_robot/src/: ur_kinematics.cpp
Remodel_project/kinematics/uc1_simulation/ur_kinematics_robot/src/ur_kinematics/: ik_ur.cpp  prove.cpp  ss.cpp
Remodel_project/kinematics/uc1_simulation/ur_kinematics_robot/srv/: UrForwardKinematics.srv  UrInverseKinematics.srv
Remodel_project/robotiq_control/: CMakeLists.txt  README.md  package.xml  setup.py
Remodel_project/robotiq_control/config/: hand_e_controller.yaml  joint_names_hand_e_visu.yaml
Remodel_project/robotiq_control/launch/: TcpIp_ActionServer.launch  display.launch  gazebo.launch  gripper_controller_spawn.launch  robotiq_action_server.launch
Remodel_project/robotiq_control/meshes/fingers/: tactile2x6.STL  tactile5x5.STL
Remodel_project/robotiq_control/meshes/fingers/wiring_iema/: finger_left.STL  finger_right.STL
Remodel_project/robotiq_control/meshes/hand_e/: hand_e.STL  slider.STL
Remodel_project/robotiq_control/script/: GripperCmd.py  GripperCommon.py  GripperModbusRtu.py  GripperSocket.py
Remodel_project/robotiq_control/src/robotiq_control/: GripperActSrvMdbsRs485.py  GripperActSrvTcp_Ip.py  GripperCmd.py  GripperModbusRtu.py  GripperSocket.py  test_client.py  utils.py
Remodel_project/robotiq_control/urdf/2f_85/: robotiq_arg2f_85_TactileSensors.xacro  robotiq_arg2f_85_model.xacro
Remodel_project/robotiq_control/urdf/hand_e/: finger.xacro  hand_e.urdf.xacro  hand_e_tramission.xacro  robotiq.xacro
Remodel_project/structure/dual_ur_robot/: CMakeLists.txt  package.xml
Remodel_project/structure/dual_ur_robot/config/: leftarm_controllers.yaml  rightarm_controllers.yaml  robot_calibration_left.yaml  robot_calibration_right.yaml  robot_controllers.yaml
Remodel_project/structure/robotiq_hand_e/config/: robotiq_controller.yaml
Remodel_project/structure/robotiq_hand_e/launch/: gripper_controller_spawn.launch
Remodel_project/structure/robotiq_hand_e/meshes/: hand_e_finger_left_.stl  hand_e_finger_right_.stl  wiring_gripper.STL  wiring_gripper_.stl  wiring_gripper_collision.stl
Remodel_project/structure/robotiq_hand_e/rviz/: urdf.rviz
Remodel_project/structure/ur10_sim/: CMakeLists.txt  package.xml
moveit_conf/: .setup_assistant  package.xml
moveit_conf/config/: dual.srdf  fake_controllers.yaml  gazebo_dual.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
moveit_conf/launch/: chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml
ur_move_behaviors/: README.md
ur_move_behaviors/ur_move_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
ur_move_behaviors/ur_move_flexbe_behaviors/manifest/: eftggr.xml  linear_interpolation.xml  move_one_arm.xml  move_two_arm_sync.xml  pick_and_place_arm.xml  two_move_robots.xml
ur_move_behaviors/ur_move_flexbe_states/: CMakeLists.txt  package.xml  setup.py
ur_move_behaviors/ur_move_flexbe_states/src/ur_move_flexbe_states/: Cart_linear_interpolator.py  Check_Radius_staes.py  Check_configuration_states.py  Check_double_collision_service.py  Current_joint_pose_states.py  Final_joint_traj_states.py  From_list_to_pose_states.py  Gripper_motion_pub.py  Homing_poses_states.py  Joint_move_dual_arm_states.py  Joint_move_single_arm_states.py  Joint_traj_service.py  Linear_interpolator_service.py  Ready_to_pick_states.py  TcpPosition_states.py  TcpW_to_eeBase_states.py
ur_scripts/: CMakeLists.txt  package.xml  setup.py
ur_scripts/src/ur_scripts/: Checking_collision_F.py  Constants_F.py  Interpolator_F.py  Operation_F.py
(+101 files in other folders)
