<package>
  <name>ur_move_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     ur_move_flexbe_states provides a collection of custom states.
     Feel free to add new states.
  </description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ur_kinematics_robot</build_depend>
  <build_depend>ur_scripts</build_depend>
  <build_depend>robotiq_control</build_depend>

  



  <run_depend>rospy</run_depend>

  <run_depend>flexbe_core</run_depend>
  <run_depend>ur_scripts</run_depend>
  <run_depend>ur_kinematics_robot</run_depend>
  <run_depend>robotiq_control</run_depend>




  <export>
    <flexbe_states />
  </export>

</package>
