<?xml version="1.0"?>
<package>
  <name>uc1_msgs</name>
  <version>0.1.0</version>
  <description>Contains the simulation environment and a code example to run the REMODEL uc1 test environment</description>

  <maintainer email="gianluca.palli@unibo.it">Gianluca Palli</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <author email="gianluca.palli@unibo.it">Gianluca Palli</author> 


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend> database_wires </build_depend>


  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <run_depend> database_wires </run_depend>



</package>
